--- a/configs.yml
+++ b/configs.yml
@@ -2,8 +2,8 @@
 
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
-  lss_mask_name: Mask_noise_75percent
-  flux_min_cut: 2
+  lss_mask_name: Mask_coverage
+  flux_min_cut: 0.5
   nside: 512
   z_tail: 1.0
   bias: 1.3
@@ -11,23 +11,23 @@ LoTSS_DR2:
 
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
-  correlation_symbols: [gg, gt]
-#  l_max: {
-#    gg: 510,
-#    gk: 510,
-#  }
-#  ells_per_bin: {
-#    gg: 50,
-#    gk: 50,
-#  }
-  l_min: {
-    gg: 2,
-    gt: 2,
+  correlation_symbols: [gg, gk]
+  l_max: {
+    gg: 510,
+    gk: 510,
   }
-  ell_lengths: {
-    gg: [16, 16],
-    gt: [16, 16],
+  ells_per_bin: {
+    gg: 50,
+    gk: 50,
   }
+#  l_min: {
+#    gg: 2,
+#    gt: 2,
+#  }
+#  ell_lengths: {
+#    gg: [16, 16, 16],
+#    gt: [16, 16, 16],
+#  }
 
   starting_params: {bias: [2.1, 0.5], sigma8: [0.83, 0.1]}
   n_walkers: 32
