--- a/configs.yml
+++ b/configs.yml
@@ -1,12 +1,12 @@
-# Configurations given in 3 groups of parameters: data, power spectra and MCMC parameters
+# Configurations given in 3 groups of parameters: data, power spectra and MCMC
 
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
-  lss_mask_name: Mask_noise_99percent
+  lss_mask_name: Mask_coverage
   flux_min_cut: 2
   nside: 512
-  z_tail: 1.0
-  bias: 1.3
+  z_tail: 2.0
+  bias: 2.1
   scale_bias: True
 
   cosmology_name: planck
@@ -25,8 +25,8 @@ LoTSS_DR2:
 #    gt: 2,
 #  }
 #  ell_lengths: {
-#    gg: [16, 16, 16],
-#    gt: [16, 16, 16],
+#    gg: [16, 16],
+#    gt: [16, 16],
 #  }
 
   starting_params: {bias: [2.1, 0.5], sigma8: [0.83, 0.1]}
