--- a/configs.yml
+++ b/configs.yml
@@ -3,7 +3,7 @@
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
   is_optical: False
-  lss_mask_name: Mask_noise_75percent
+  lss_mask_name: Mask_coverage
   flux_min_cut: 2
   nside: 512
   z_tail: 1.3
@@ -12,23 +12,19 @@ LoTSS_DR2:
 
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
-  correlation_symbols: [gg, gk]
+  correlation_symbols: [gg, gt]
   l_max: {
-    gg: null,
-    gk: null,
+#    gg: 510,
+#    gk: 510,
+    gg: 36,
+    gt: 36,
   }
   ells_per_bin: {
-    gg: 200,
-    gk: 200,
+#    gg: 50,
+#    gk: 50,
+    gg: 16,
+    gt: 16,
   }
-#  l_min: {
-#    gg: 2,
-#    gt: 2,
-#  }
-#  ell_lengths: {
-#    gg: [16, 16],
-#    gt: [16, 16],
-#  }
 
   starting_params: {bias: [2.1, 0.5], sigma8: [0.83, 0.1]}
   n_walkers: 32
