--- a/configs.yml
+++ b/configs.yml
@@ -2,7 +2,7 @@
 
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
-  is_optical: False
+  is_optical: True
   lss_mask_name: Mask_coverage
   nside: 512
   signal_to_noise: 3
@@ -14,16 +14,16 @@ LoTSS_DR2:
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
   l_range: {
-#    gg: [102, 802],
-#    gk: [52, 802],
-    gg: [2, 66],
-    gt: [2, 66],
+    gg: [52, 802],
+    gk: [52, 802],
+#    gg: [4, 120],
+#    gt: [4, 120],
   }
   ells_per_bin: {
-#    gg: 50,
-#    gk: 50,
-    gg: 16,
-    gt: 16,
+    gg: 50,
+    gk: 50,
+#    gg: 16,
+#    gt: 16,
   }
 
   starting_params: {bias: [2.1, 0.5], sigma8: [0.83, 0.1]}
