--- a/configs.yml
+++ b/configs.yml
@@ -1,16 +1,25 @@
-# Configurations given in 3 groups of parameters: data, power spectra and MCMC
+# Configurations given in order of: data, correlations, MCMC
+# Dictionaries are functions of flux cut
 
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
   is_optical: True
   lss_mask_name: Mask_coverage
   nside: 512
-  signal_to_noise: 3
   flux_min_cut: 1
-  z_tail: 1.1
-  bias: 1.2
-  scale_bias: True
+  signal_to_noise: 3
 
+  new_z_dist: True
+  # Old redshift distribution
+  z_tail: {2: 1.3, 1: 1.1, 0.5: 1.1}
+  # New redshift distribution
+  z_sfg: {2: 0.28, 1: 0.24, 0.5: 0.22}
+  z_agn: {2: 1.5, 1: 1.5, 0.5: 1.5}
+  r: {2: 0.01, 1: 0.007, 0.5: 0.005}
+  # Bias
+  scale_bias: True
+  bias: {2: 1.4, 1: 1.2, 0.5: 1.1}
+  
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
   l_range: {
