--- a/configs.yml
+++ b/configs.yml
@@ -6,13 +6,14 @@ LoTSS_DR2:
   is_optical: False
   lss_mask_name: Mask_coverage
   nside: 512
-  flux_min_cut: 1
-  signal_to_noise: 3
+  flux_min_cut: 2
+  signal_to_noise: 5
 
   dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law'
   # Old redshift distribution
   z_tail: {2: 1.3, 1: 1.0, 0.5: 1.0}
   # New redshift distribution
+  # First line: Dominik's fits
 #  z_sfg: {2: 0.13, 1: 0.14, 0.5: 0.15}
   z_sfg: {2: 0.15, 1: 0.22, 0.5: 0.15}
 #  a: {2: 4.66, 1: 4.60, 0.5: 4.56}
@@ -20,8 +21,11 @@ LoTSS_DR2:
 #  r: {2: 0.94, 1: 0.90, 0.5: 0.93}
   r: {2: 0.91, 1: 0.80, 0.5: 0.93}
   # Bias
-  scale_bias: True
-  bias: {2: 1.4, 1: 1.2, 0.5: 1.1}
+  bias_model: 'polynomial'  # 'linear', 'scaled', 'polynomial'
+  b_0_scaled: {2: 1.4, 1: 1.2, 0.5: 1.1}
+  b_0: {2: 1, 1: 0, 0.5: 0}
+  b_1: {2: 1, 1: 0, 0.5: 0}
+  b_2: {2: 1, 1: 0, 0.5: 0}
 
   read_data_correlations_flag: True
   cosmology_name: planck
