--- a/configs.yml
+++ b/configs.yml
@@ -31,22 +31,22 @@ LoTSS_DR2:
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
   l_range: {
-    gg: [52, 802],
+#    gg: [52, 802],
     gk: [52, 802],
 #    gg: [2, 120],
 #    gt: [2, 120],
   }
   ells_per_bin: {
-    gg: 50,
+#    gg: 50,
     gk: 50,
 #    gg: 16,
 #    gt: 16,
   }
 
-  starting_params: {b_0_scaled: [1.4, 0.5]}  # , sigma8: [0.83, 0.1]}
-  n_walkers: 32
-  max_iterations: 5000
   continue_sampling: False
+  starting_params: {b_0_scaled: [1.4, 0.5]}  # , sigma8: [0.83, 0.1]}
+  max_iterations: 5000
+  n_walkers: 32
 
 
 LoTSS_DR1:
@@ -56,28 +56,28 @@ LoTSS_DR1:
   flux_min_cut: 2
   signal_to_noise: 5
 
-  dn_dz_model: 'z_tail'  # 'deep_fields', 'z_tail', 'power_law'
+  dn_dz_model: 'deep_fields'  # 'deep_fields', 'z_tail', 'power_law'
   # Old redshift distribution
   z_tail: {2: 2.0}
   bias_model: 'scaled'  # 'linear', 'scaled', 'polynomial'
-  b_0_scaled: {2: 2.1}  # 2.1
+  b_0_scaled: {2: 1.4}  # 2.1
 
   read_data_correlations_flag: False
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
   l_range: {
     gg: [2, 502],
-    gk: [2, 502],
+#    gk: [2, 502],
   }
   ells_per_bin: {
     gg: 50,
-    gk: 50,
+#    gk: 50,
   }
 
-  starting_params: {b_0_scaled: [2.1, 0.5]}  # , sigma8: [0.83, 0.1]}
-  n_walkers: 32
-  max_iterations: 20000
   continue_sampling: False
+  starting_params: {b_0_scaled: [1.4, 0.5]}  # , sigma8: [0.83, 0.1]}
+  max_iterations: 5000
+  n_walkers: 32
 
 
 KiDS_QSO:
@@ -98,10 +98,10 @@ KiDS_QSO:
     gk: 50
   }
 
+  continue_sampling: False
+  max_iterations: 5000
   starting_params: {bias: [2.1, 0.5], sigma8: [0.83, 0.1]}
   n_walkers: 32
-  max_iterations: 5000
-  continue_sampling: False
 
 
 NVSS:
@@ -122,7 +122,7 @@ NVSS:
     gt: [6, 12, 24, 52],
   }
 
+  continue_sampling: False
+  max_iterations: 5000
   starting_params: {bias: (2.18, 0.5)}
   n_walkers: 32
-  max_iterations: 5000
-  continue_sampling: False
