--- a/configs.yml
+++ b/configs.yml
@@ -4,7 +4,8 @@
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
   is_optical: False
-  lss_mask_name: Mask_coverage
+  # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median, mask_optical
+  lss_mask_name: mask_coverage
   nside: 512
   flux_min_cut: 2
   signal_to_noise: 5
