--- a/configs.yml
+++ b/configs.yml
@@ -10,7 +10,7 @@ LoTSS_DR2:
   flux_min_cut: 2
   signal_to_noise: 5
 
-  dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law'
+  dn_dz_model: 'tomographer'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   # Old redshift distribution
   z_tail: {2: 1.3, 1: 1.0, 0.5: 1.0}
   # New redshift distribution
@@ -22,11 +22,12 @@ LoTSS_DR2:
 #  r: {2: 0.94, 1: 0.90, 0.5: 0.93}
   r: {2: 0.91, 1: 0.80, 0.5: 0.93}
   # Bias
-  bias_model: 'scaled'  # 'linear', 'scaled', 'polynomial'
+  bias_model: 'tomographer'  # 'linear', 'scaled', 'polynomial', 'tomographer'
   b_0_scaled: {2: 1.5, 1: 1.2, 0.5: 1.1}
   b_0: {2: 1, 1: 0, 0.5: 0}
   b_1: {2: 1, 1: 0, 0.5: 0}
   b_2: {2: 1, 1: 0, 0.5: 0}
+  b_eff: {2: 2.4, 1: 1, 0.5: 1}
 
   read_data_correlations_flag: False
   cosmology_name: planck
