--- a/configs.yml
+++ b/configs.yml
@@ -3,31 +3,41 @@
 
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
-  is_optical: False
+  is_optical: True
   # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median, mask_optical
-  lss_mask_name: mask_coverage
+  lss_mask_name: mask_optical
   nside: 512
   flux_min_cut: 2
   signal_to_noise: 5
 
-  dn_dz_model: 'tomographer'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
+  dn_dz_model: 'deep_fields'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   # Old redshift distribution
   z_tail: {2: 1.3, 1: 1.0, 0.5: 1.0}
   # New redshift distribution
   # First line: Dominik's fits
+  # Second line: My fits?
+  # Third line: Fit to tomographer
+  # Fourth line: Fit to tomographer assuming b(z) = b / D(z)
 #  z_sfg: {2: 0.13, 1: 0.14, 0.5: 0.15}
-  z_sfg: {2: 0.15, 1: 0.22, 0.5: 0.15}
+#  z_sfg: {2: 0.15, 1: 0.22, 0.5: 0.15}
+#  z_sfg: {2: 0.039, 1: 0, 0.5: 0}
+  z_sfg: {2: 0.038, 1: 0, 0.5: 0}
 #  a: {2: 4.66, 1: 4.60, 0.5: 4.56}
-  a: {2: 4.8, 1: 5.2, 0.5: 4.56}
+#  a: {2: 4.8, 1: 5.2, 0.5: 4.56}
+#  a: {2: 3.59, 1: 0, 0.5: 0}
+  a: {2: 4.45, 1: 0, 0.5: 0}
 #  r: {2: 0.94, 1: 0.90, 0.5: 0.93}
-  r: {2: 0.91, 1: 0.80, 0.5: 0.93}
+#  r: {2: 0.91, 1: 0.80, 0.5: 0.93}
+#  r: {2: 0.18, 1: 0, 0.5: 0}
+  r: {2: 0.18, 1: 0, 0.5: 0}
+
   # Bias
-  bias_model: 'tomographer'  # 'linear', 'scaled', 'polynomial', 'tomographer'
-  b_0_scaled: {2: 1.5, 1: 1.2, 0.5: 1.1}
+  bias_model: 'scaled'  # 'linear', 'scaled', 'polynomial', 'tomographer'
+  b_0_scaled: {2: 1.4, 1: 1.2, 0.5: 1.1}
   b_0: {2: 1, 1: 0, 0.5: 0}
   b_1: {2: 1, 1: 0, 0.5: 0}
   b_2: {2: 1, 1: 0, 0.5: 0}
-  b_eff: {2: 2.4, 1: 1, 0.5: 1}
+  b_eff: {2: 2.9, 1: 1, 0.5: 1}
 
   read_data_correlations_flag: False
   cosmology_name: planck
