--- a/configs.yml
+++ b/configs.yml
@@ -10,6 +10,21 @@ LoTSS_DR2:
   flux_min_cut: 2
   signal_to_noise: 5
 
+  read_data_correlations_flag: False
+  with_jackknife: True
+  l_range: {
+    gg: [102, 752],
+    gk: [52, 802],
+#    gg: [2, 120],
+#    gt: [2, 120],
+  }
+  ells_per_bin: {
+    gg: 50,
+    gk: 50,
+#    gg: 16,
+#    gt: 16,
+  }
+
   dn_dz_model: 'deep_fields'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   # Old redshift distribution
   z_tail: {2: 1.3, 1: 1.0, 0.5: 1.0}
@@ -25,7 +40,7 @@ LoTSS_DR2:
 #  a: {2: 4.66, 1: 4.60, 0.5: 4.56}
 #  a: {2: 4.8, 1: 5.2, 0.5: 4.56}
 #  a: {2: 3.59, 1: 0, 0.5: 0}
-  a: {2: 4.45, 1: 0, 0.5: 0}
+  na: {2: 4.45, 1: 0, 0.5: 0}
 #  r: {2: 0.94, 1: 0.90, 0.5: 0.93}
 #  r: {2: 0.91, 1: 0.80, 0.5: 0.93}
 #  r: {2: 0.18, 1: 0, 0.5: 0}
@@ -39,22 +54,11 @@ LoTSS_DR2:
   b_2: {2: 1, 1: 0, 0.5: 0}
   b_eff: {2: 2.9, 1: 1, 0.5: 1}
 
-  read_data_correlations_flag: False
+  # Cosmology
   cosmology_name: planck
   cosmology_matter_power_spectrum: halofit
-  l_range: {
-    gg: [102, 802],
-    gk: [102, 802],
-#    gg: [2, 120],
-#    gt: [2, 120],
-  }
-  ells_per_bin: {
-    gg: 50,
-    gk: 50,
-#    gg: 16,
-#    gt: 16,
-  }
 
+  # Inference
   continue_sampling: False
   starting_params: {b_0_scaled: [1.4, 0.5]}  # , sigma8: [0.83, 0.1]}
   max_iterations: 5000
