--- a/configs.yml
+++ b/configs.yml
@@ -4,14 +4,15 @@
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
   is_optical: False
-  # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median, mask_optical, mask_inner
   lss_mask_name: mask_inner
+  # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median, mask_optical, mask_inner
   nside: 512
-  flux_min_cut: 2
-  signal_to_noise: 5
+  flux_min_cut: 1.5
+  signal_to_noise: 7.5
 
-  read_data_correlations_flag: False
-  with_jackknife: True
+  read_correlations_flag: False
+  read_covariance_flag: True
+  error_method: jackknife  # gauss
   l_range: {
     gg: [102, 752],
     gk: [52, 802],
@@ -27,32 +28,37 @@ LoTSS_DR2:
 
   dn_dz_model: 'deep_fields'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   # Old redshift distribution
-  z_tail: {2: 1.3, 1: 1.0, 0.5: 1.0}
+  z_tail: {2: 1.3, 1.5: 0, 1: 1.0, 0.5: 1.0}
   # New redshift distribution
   # First line: Dominik's fits
   # Second line: My fits?
   # Third line: Fit to tomographer
   # Fourth line: Fit to tomographer assuming b(z) = b / D(z)
-#  z_sfg: {2: 0.13, 1: 0.14, 0.5: 0.15}
-#  z_sfg: {2: 0.15, 1: 0.22, 0.5: 0.15}
-#  z_sfg: {2: 0.039, 1: 0, 0.5: 0}
-  z_sfg: {2: 0.038, 1: 0, 0.5: 0}
-#  a: {2: 4.66, 1: 4.60, 0.5: 4.56}
-#  a: {2: 4.8, 1: 5.2, 0.5: 4.56}
-#  a: {2: 3.59, 1: 0, 0.5: 0}
-  na: {2: 4.45, 1: 0, 0.5: 0}
-#  r: {2: 0.94, 1: 0.90, 0.5: 0.93}
-#  r: {2: 0.91, 1: 0.80, 0.5: 0.93}
-#  r: {2: 0.18, 1: 0, 0.5: 0}
-  r: {2: 0.18, 1: 0, 0.5: 0}
+#  z_sfg: {2: 0.13, 1.5: 0, 1: 0.14, 0.5: 0.15}
+#  z_sfg: {2: 0.15, 1.5: 0, 1: 0.22, 0.5: 0.15}
+#  z_sfg: {2: 0.039, 1.5: 0}
+  z_sfg: {2: 0.038, 1.5: 0.037}
+
+#  a: {2: 4.66, 1.5: 0, 1: 4.60, 0.5: 4.56}
+#  a: {2: 4.8, 1.5: 0, 1: 5.2, 0.5: 4.56}
+#  a: {2: 3.59, 1.5: 0}
+  a: {2: 4.45, 1.5: 4.20}
+
+#  r: {2: 0.94, 1.5: 0, 1: 0.90, 0.5: 0.93}
+#  r: {2: 0.91, 1.5: 0, 1: 0.80, 0.5: 0.93}
+#  r: {2: 0.18, 1.5: 0}
+  r: {2: 0.18, 1.5: 0.19}
+
+  n: {2: 0, 1.5: 111252}
 
   # Bias
   bias_model: 'scaled'  # 'linear', 'scaled', 'polynomial', 'tomographer'
-  b_0_scaled: {2: 1.4, 1: 1.2, 0.5: 1.1}
-  b_0: {2: 1, 1: 0, 0.5: 0}
-  b_1: {2: 1, 1: 0, 0.5: 0}
-  b_2: {2: 1, 1: 0, 0.5: 0}
-  b_eff: {2: 2.9, 1: 1, 0.5: 1}
+  b_0_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}  # 1.3
+  b_0: {2: 1, 1.5: 0}
+  b_1: {2: 1, 1.5: 0}
+  b_2: {2: 1, 1.5: 0}
+  b_eff: {2: 2.9, 1.5: 2.7}
+  A_sn: {2: 1, 1.5: 1}
 
   # Cosmology
   cosmology_name: planck
@@ -60,8 +66,10 @@ LoTSS_DR2:
 
   # Inference
   continue_sampling: False
-  starting_params: {b_0_scaled: [1.4, 0.5]}  # , sigma8: [0.83, 0.1]}
-  max_iterations: 5000
+  fit_tomographer: False
+#  to_infere: [b_0_scaled, z_sfg, a, r, n, A_sn]
+  to_infere: [A_sn]
+  max_iterations: 20000
   n_walkers: 32
 
 
