--- a/configs.yml
+++ b/configs.yml
@@ -12,8 +12,10 @@ LoTSS_DR2:
 
   read_correlations_flag: False
   read_covariance_flag: True
-  error_method: jackknife  # gauss
+  error_method: jackknife  # jackknife, gauss
   l_range: {
+#    gg: [102, 1602],
+#    gk: [52, 1752],
     gg: [102, 752],
     gk: [52, 802],
 #    gg: [2, 120],
@@ -26,38 +28,31 @@ LoTSS_DR2:
 #    gt: 16,
   }
 
-  dn_dz_model: 'deep_fields'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
-  # Old redshift distribution
+  dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   z_tail: {2: 1.3, 1.5: 0, 1: 1.0, 0.5: 1.0}
-  # New redshift distribution
-  # First line: Dominik's fits
-  # Second line: My fits?
-  # Third line: Fit to tomographer
-  # Fourth line: Fit to tomographer assuming b(z) = b / D(z)
-#  z_sfg: {2: 0.13, 1.5: 0, 1: 0.14, 0.5: 0.15}
-#  z_sfg: {2: 0.15, 1.5: 0, 1: 0.22, 0.5: 0.15}
-#  z_sfg: {2: 0.039, 1.5: 0}
-  z_sfg: {2: 0.038, 1.5: 0.037}
-
-#  a: {2: 4.66, 1.5: 0, 1: 4.60, 0.5: 4.56}
-#  a: {2: 4.8, 1.5: 0, 1: 5.2, 0.5: 4.56}
-#  a: {2: 3.59, 1.5: 0}
-  a: {2: 4.45, 1.5: 4.20}
-
-#  r: {2: 0.94, 1.5: 0, 1: 0.90, 0.5: 0.93}
-#  r: {2: 0.91, 1.5: 0, 1: 0.80, 0.5: 0.93}
-#  r: {2: 0.18, 1.5: 0}
-  r: {2: 0.18, 1.5: 0.19}
-
-  n: {2: 0, 1.5: 111252}
+  # Lines: Dominik's fit to deep fields; my fit to tomographer; my fit to tomographer * D(z)
+#  z_sfg: {2: 0.13, 1.5: 0.13, 1: 0.14, 0.5: 0.15}
+  z_sfg: {2: 0.039, 1.5: 0}
+#  z_sfg: {2: 0.038, 1.5: 0.037}
+#  a: {2: 4.66, 1.5: 6.64, 1: 4.60, 0.5: 4.56}
+  a: {2: 3.59, 1.5: 0}
+#  a: {2: 4.45, 1.5: 4.20}
+#  r: {2: 0.94, 1.5: 0.92, 1: 0.90, 0.5: 0.93}
+  r: {2: 0.18, 1.5: 0}
+#  r: {2: 0.18, 1.5: 0.19}
+#  n: {2: 1, 1.5: 1}
+#  n: {2: 1, 1.5: 1}
+#  n: {2: 0, 1.5: 111252}
 
   # Bias
-  bias_model: 'scaled'  # 'linear', 'scaled', 'polynomial', 'tomographer'
+  bias_model: 'linear'  # 'linear', 'scaled', 'polynomial', 'tomographer'
   b_0_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}  # 1.3
-  b_0: {2: 1, 1.5: 0}
+  b_0: {2: 1.4, 1.5: 1.3}
   b_1: {2: 1, 1.5: 0}
   b_2: {2: 1, 1.5: 0}
   b_eff: {2: 2.9, 1.5: 2.7}
+
+  # Shot noise
   A_sn: {2: 1, 1.5: 1}
 
   # Cosmology
@@ -66,10 +61,9 @@ LoTSS_DR2:
 
   # Inference
   continue_sampling: False
-  fit_tomographer: False
-#  to_infere: [b_0_scaled, z_sfg, a, r, n, A_sn]
-  to_infere: [b_0_scaled, A_sn]
-  max_iterations: 20000
+  redshift_to_fit: tomographer  # tomographer, deep_fields, None
+  to_infere: [sigma8, b_0_scaled, A_sn, z_sfg, a, r]  # , n]
+  max_iterations: 100000
   n_walkers: 32
 
 
