--- a/configs.yml
+++ b/configs.yml
@@ -31,25 +31,30 @@ LoTSS_DR2:
   dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   z_tail: {2: 1.3, 1.5: 0, 1: 1.0, 0.5: 1.0}
   # Lines: Dominik's fit to deep fields; my fit to tomographer; my fit to tomographer * D(z)
-#  z_sfg: {2: 0.13, 1.5: 0.13, 1: 0.14, 0.5: 0.15}
-  z_sfg: {2: 0.039, 1.5: 0}
+  z_sfg: {2: 0.13, 1.5: 0.13, 1: 0.14, 0.5: 0.15}
+#  z_sfg: {2: 0.039, 1.5: 0.039}
 #  z_sfg: {2: 0.038, 1.5: 0.037}
-#  a: {2: 4.66, 1.5: 6.64, 1: 4.60, 0.5: 4.56}
-  a: {2: 3.59, 1.5: 0}
+  a: {2: 4.66, 1.5: 6.64, 1: 4.60, 0.5: 4.56}
+#  a: {2: 3.59, 1.5: 3.33}
 #  a: {2: 4.45, 1.5: 4.20}
-#  r: {2: 0.94, 1.5: 0.92, 1: 0.90, 0.5: 0.93}
-  r: {2: 0.18, 1.5: 0}
+  r: {2: 0.94, 1.5: 0.92, 1: 0.90, 0.5: 0.93}
+#  r: {2: 0.18, 1.5: 0.18}
 #  r: {2: 0.18, 1.5: 0.19}
-#  n: {2: 1, 1.5: 1}
-#  n: {2: 1, 1.5: 1}
+  n: {2: 1, 1.5: 1}
+#  n: {2: 1, 1.5: 109298}
 #  n: {2: 0, 1.5: 111252}
 
   # Bias
-  bias_model: 'linear'  # 'linear', 'scaled', 'polynomial', 'tomographer'
-  b_0_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}  # 1.3
+  bias_model: 'constant'
+  # constant
+  b_g: {2: 3.0, 1.5: 3.0}
+  # scaled
+  b_g_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}
+  # polynomial
   b_0: {2: 1.4, 1.5: 1.3}
   b_1: {2: 1, 1.5: 0}
   b_2: {2: 1, 1.5: 0}
+  # tomographer
   b_eff: {2: 2.9, 1.5: 2.7}
 
   # Shot noise
@@ -61,8 +66,8 @@ LoTSS_DR2:
 
   # Inference
   continue_sampling: False
-  redshift_to_fit: tomographer  # tomographer, deep_fields, None
-  to_infere: [sigma8, b_0_scaled, A_sn, z_sfg, a, r]  # , n]
+  redshift_to_fit: deep_fields  # tomographer, deep_fields, None
+  to_infere: [sigma8, b_g, A_sn, z_sfg, a, r]
   max_iterations: 100000
   n_walkers: 32
 
