--- a/configs.yml
+++ b/configs.yml
@@ -4,8 +4,8 @@
 LoTSS_DR2:
   lss_survey_name: LoTSS_DR2
   is_optical: False
-  lss_mask_name: mask_inner
-  # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median, mask_optical, mask_inner
+  lss_mask_name: mask_inner  # mask_inner, mask_optical
+  # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median
   nside: 512
   flux_min_cut: 1.5
   signal_to_noise: 7.5
@@ -14,10 +14,8 @@ LoTSS_DR2:
   read_covariance_flag: True
   error_method: jackknife  # jackknife, gauss
   l_range: {
-#    gg: [102, 1602],
-#    gk: [52, 1752],
-    gg: [52, 252],  # 752
-    gk: [52, 252],  # 802
+    gg: [52, 502],  # 252, 502
+    gk: [52, 502],  # 252, 502
 #    gg: [2, 120],
 #    gt: [2, 120],
   }
@@ -30,7 +28,9 @@ LoTSS_DR2:
 
   dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
   z_tail: {2: 1.3, 1.5: 0, 1: 1.0, 0.5: 1.0}
-  # Lines: Dominik's fit to deep fields; my fit to tomographer; my fit to tomographer * D(z)
+  # 1: Dominik's fit to deep fields
+  # 2: My fit to tomographer
+  # 3: My fit to tomographer * D(z)
   z_sfg: {2: 0.13, 1.5: 0.13, 1: 0.14, 0.5: 0.15}
 #  z_sfg: {2: 0.039, 1.5: 0.039}
 #  z_sfg: {2: 0.038, 1.5: 0.037}
@@ -66,10 +66,11 @@ LoTSS_DR2:
   cosmology_matter_power_spectrum: halofit
 
   # Inference
+  mcmc_engine: zeus  # zeus, emcee
   continue_sampling: False
   redshift_to_fit: deep_fields  # deep_fields, tomographer, None
   correlations_to_use: [gg, gk]
-  to_infere: [sigma8, b_g_scaled, A_sn, z_sfg, a, r]  # A_z_tail
+  to_infere: [sigma8, b_g_scaled, A_sn, z_sfg, a, r]  # sigma8, b_g_scaled, A_sn, z_sfg, a, r, n, A_z_tail
   max_iterations: 100000
   n_walkers: 32
 
