--- a/configs.yml
+++ b/configs.yml
@@ -40,21 +40,21 @@ LoTSS_DR2:
   r: {2: 0.94, 1.5: 0.92, 1: 0.90, 0.5: 0.93}
 #  r: {2: 0.18, 1.5: 0.18}
 #  r: {2: 0.18, 1.5: 0.19}
-  n: {2: 1, 1.5: 1}
+#  n: {2: 1, 1.5: 1}
 #  n: {2: 1, 1.5: 109298}
-#  n: {2: 0, 1.5: 111252}
+  n: {2: 0, 1.5: 111252}
   A_z_tail: {1.5: 1}
 
   # Bias
-  bias_model: 'scaled'
+  bias_model: 'quadratic'
   # constant
   b_g: {2: 3.0, 1.5: 3.0}
   # scaled
   b_g_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}
-  # polynomial
-  b_0: {2: 1.4, 1.5: 1.3}
-  b_1: {2: 1, 1.5: 0}
-  b_2: {2: 1, 1.5: 0}
+  # quadratic
+  b_0: {1.5: 1.0}
+  b_1: {1.5: 0.1}
+  b_2: {1.5: 0.1}
   # tomographer
   b_eff: {2: 2.9, 1.5: 2.7}
 
@@ -66,11 +66,12 @@ LoTSS_DR2:
   cosmology_matter_power_spectrum: halofit
 
   # Inference
-  mcmc_engine: zeus  # zeus, emcee
+  mcmc_engine: emcee  # zeus, emcee
   continue_sampling: False
-  redshift_to_fit: deep_fields  # deep_fields, tomographer, None
+  redshifts_to_fit: [deep_fields, tomographer]  # [deep_fields, tomographer]
+  fit_bias_to_tomo: True
   correlations_to_use: [gg, gk]
-  to_infere: [sigma8, b_g_scaled, A_sn, z_sfg, a, r]  # sigma8, b_g_scaled, A_sn, z_sfg, a, r, n, A_z_tail
+  to_infere: [b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, b_g_scaled, A_sn, z_sfg, a, r, n, A_z_tail
   max_iterations: 100000
   n_walkers: 32
 
