--- a/configs.yml
+++ b/configs.yml
@@ -40,9 +40,9 @@ LoTSS_DR2:
   r: {2: 0.94, 1.5: 0.92, 1: 0.90, 0.5: 0.93}
 #  r: {2: 0.18, 1.5: 0.18}
 #  r: {2: 0.18, 1.5: 0.19}
-#  n: {2: 1, 1.5: 1}
+  n: {2: 1, 1.5: 110000}
 #  n: {2: 1, 1.5: 109298}
-  n: {2: 0, 1.5: 111252}
+#  n: {2: 1, 1.5: 111252}
   A_z_tail: {1.5: 1}
 
   # Bias
@@ -52,8 +52,8 @@ LoTSS_DR2:
   # scaled
   b_g_scaled: {2: 1.4, 1.5: 1.3, 1: 1.2, 0.5: 1.1}
   # quadratic
-  b_0: {1.5: 1.0}
-  b_1: {1.5: 0.1}
+  b_0: {1.5: 1.3}
+  b_1: {1.5: 0.3}
   b_2: {1.5: 0.1}
   # tomographer
   b_eff: {2: 2.9, 1.5: 2.7}
@@ -71,7 +71,7 @@ LoTSS_DR2:
   redshifts_to_fit: [deep_fields, tomographer]  # [deep_fields, tomographer]
   fit_bias_to_tomo: True
   correlations_to_use: [gg, gk]
-  to_infere: [b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, b_g_scaled, A_sn, z_sfg, a, r, n, A_z_tail
+  to_infere: [sigma8, b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, b_g_scaled, A_sn, z_sfg, a, r, n, A_z_tail
   max_iterations: 100000
   n_walkers: 32
 
