--- a/configs.yml
+++ b/configs.yml
@@ -16,16 +16,16 @@ LoTSS_DR2:
   read_covariance_flag: True
   error_method: jackknife  # jackknife, gauss
   l_range: {
-#    gg: [52, 802],  # 252, 502, 802
-#    gk: [52, 802],  # 252, 502, 802
-    gg: [2, 80],  # 34
-    gt: [2, 80],  # 34
+    gg: [52, 502],  # 252, 502, 802
+    gk: [52, 502],  # 252, 502, 802
+#    gg: [2, 80],  # 34
+#    gt: [2, 80],  # 34
   }
   ells_per_bin: {
-#    gg: 50,
-#    gk: 50,
-    gg: 16,
-    gt: 16,
+    gg: 50,
+    gk: 50,
+#    gg: 16,
+#    gt: 16,
   }
 
   # Redshift
@@ -49,7 +49,7 @@ LoTSS_DR2:
   A_z_tail: {2.0: 1, 1.5: 1, 1.0: 1}
 
   # Bias
-  bias_model: 'scaled'
+  bias_model: 'quadratic'
   # constant
   b_g: {2: 3.0, 1.5: 3.0, 1.0: 3.0}
   # scaled
@@ -71,10 +71,10 @@ LoTSS_DR2:
   # Inference
   mcmc_engine: emcee  # zeus, emcee
   continue_sampling: False
-  redshifts_to_fit: [deep_fields]  # [deep_fields, tomographer]
-  fit_bias_to_tomo: False
-  correlations_to_use: [gg, gt]  # gg, gk, gt
-  to_infere: [b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, b_g, b_g_scaled, b_0, b_1, b_2, A_sn, z_sfg, a, r, n, A_z_tail
+  redshifts_to_fit: [deep_fields, tomographer]  # [deep_fields, tomographer]
+  fit_bias_to_tomo: True
+  correlations_to_use: [gg, gk]  # gg, gk, gt
+  to_infere: [b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, Omega_m, b_g, b_g_scaled, b_0, b_1, b_2, A_sn, z_sfg, a, r, n, A_z_tail
   max_iterations: 50000
   n_walkers: 32
 
