--- a/configs.yml
+++ b/configs.yml
@@ -29,37 +29,35 @@ LoTSS_DR2:
   }
 
   # Redshift
-  dn_dz_model: 'power_law'  # 'deep_fields', 'z_tail', 'power_law', 'tomographer'
-  z_tail: {2: 1.3, 1.5: 0, 1.0: 1.0, 0.5: 1.0}
-  # 1: Dominik's fit to deep fields
-  # 2: My fit to tomographer
-  # 3: My fit to tomographer * D(z)
-  z_sfg: {2: 0.13, 1.5: 0.13, 1.0: 0.14, 0.5: 0.15}
-#  z_sfg: {2: 0.039, 1.5: 0.039}
-#  z_sfg: {2: 0.038, 1.5: 0.037}
-  a: {2: 4.66, 1.5: 6.64, 1.0: 4.60, 0.5: 4.56}
-#  a: {2: 3.59, 1.5: 3.33}
-#  a: {2: 4.45, 1.5: 4.20}
-  r: {2: 0.94, 1.5: 0.92, 1.0: 0.90, 0.5: 0.93}
-#  r: {2: 0.18, 1.5: 0.18}
-#  r: {2: 0.18, 1.5: 0.19}
-  n: {2.0: 1, 1.5: 110000, 1.0: 1}
-#  n: {2: 1, 1.5: 109298}
-#  n: {2: 1, 1.5: 111252}
+  dn_dz_model: 'power_law'  # deep_fields, tomographer
+  # z_tail
+  z_tail: {2: 1.3, 1.5: 1.0, 1.0: 1.0, 0.5: 1.0}
+  # power_law
+  z_sfg: {2: 0.1, 1.5: 0.1, 1.0: 0.1, 0.5: 0.1}
+  a: {2: 4.5, 1.5: 4.5, 1.0: 4.5, 0.5: 4.5}
+  r: {2: 0.5, 1.5: 0.5, 1.0: 0.5, 0.5: 0.5}
+  n: {2.0: 100000, 1.5: 100000, 1.0: 100000}
+  # double_power_law
+  a_2: {2: 6.0, 1.5: 6.0, 1.0: 6.0}
+  r_2: {2: 0.08, 1.5: 0.08, 1.0: 0.08}
+  offset: {2: 1.4, 1.5: 1.4, 1.0: 1.4}
   A_z_tail: {2.0: 1, 1.5: 1, 1.0: 1}
 
   # Bias
-  bias_model: 'quadratic'
+  bias_model: 'scaled'
   # constant
-  b_g: {2: 3.0, 1.5: 3.0, 1.0: 3.0}
+  b_g: {2: 2.0, 1.5: 2.0, 1.0: 2.0}
   # scaled
-  b_g_scaled: {2: 1.4, 1.5: 1.3, 1.0: 1.2, 0.5: 1.1}
+  b_g_scaled: {2: 1.5, 1.5: 1.5, 1.0: 1.5}
+  # quadratic_limited
+  b_a: {2.0: 0.5, 1.5: 0.5, 1.0: 0.5}
+  b_b: {2.0: 1.0, 1.5: 1.0, 1.0: 1.0}
   # quadratic
-  b_0: {1.5: 1.3, 1.0: 1.3}
-  b_1: {1.5: 0.3, 1.0: 0.3}
-  b_2: {1.5: 0.1, 1.0: 0.1}
+  b_0: {2.0: 1.0, 1.5: 1.0, 1.0: 1.0}
+  b_1: {2.0: 2.0, 1.5: 2.0, 1.0: 2.0}
+  b_2: {2.0: -0.5, 1.5: -0.5, 1.0: -0.5}
   # tomographer
-  b_eff_tomo: {2: 2.9, 1.5: 2.7, 1.0: 2.7}
+  b_eff_tomo: {2: 2.5, 1.5: 2.5, 1.0: 2.5}
 
   # Shot noise
   A_sn: {2: 1, 1.5: 1, 1.0: 1}
@@ -71,10 +69,10 @@ LoTSS_DR2:
   # Inference
   mcmc_engine: emcee  # zeus, emcee
   continue_sampling: False
-  redshifts_to_fit: [deep_fields, tomographer]  # [deep_fields, tomographer]
-  fit_bias_to_tomo: True
+  redshifts_to_fit: [deep_fields]  # deep_fields, tomographer
   correlations_to_use: [gg, gk]  # gg, gk, gt
-  to_infere: [b_0, b_1, b_2, A_sn, z_sfg, a, r, n]  # sigma8, Omega_m, b_g, b_g_scaled, b_0, b_1, b_2, A_sn, z_sfg, a, r, n, A_z_tail
+  # sigma8, Omega_m, b_g, b_g_scaled, b_a, b_b, b_0, b_1, b_2, A_sn, z_sfg, a, r, offset, a_2, r_2, n, A_z_tail
+  to_infere: [b_g_scaled, A_sn, z_sfg, a, r]
   max_iterations: 50000
   n_walkers: 32
 
