--- a/configs.yml
+++ b/configs.yml
@@ -8,24 +8,22 @@ LoTSS_DR2:
   lss_mask_name: mask_inner  # mask_inner, mask_optical
   # mask_coverage, mask_default, mask_noise_75percent, mask_noise_99_percent, mask_noise_median
   nside: 512
-  flux_min_cut: 1.5  # 1.0, 1.5, 2.0
-  signal_to_noise: 7.5  # 5.0, 7.5
+  flux_min_cut: 2.0     # 1.0, 1.5, 2.0
+  signal_to_noise: 5.0  # 5.0, 7.5
 
   # Correlations
-  read_correlations_flag: False
+  read_correlations_flag: True
   read_covariance_flag: True
   error_method: jackknife  # jackknife, gauss
   l_range: {
     gg: [52, 502],  # 252, 502, 802
     gk: [52, 502],  # 252, 502, 802
-#    gg: [2, 80],  # 34
-#    gt: [2, 80],  # 34
+    gt: [2, 34],
   }
   ells_per_bin: {
     gg: 50,
     gk: 50,
-#    gg: 16,
-#    gt: 16,
+    gt: 16,
   }
 
   # Redshift
@@ -64,14 +62,14 @@ LoTSS_DR2:
 
   # Cosmology
   cosmology_name: planck
-  cosmology_matter_power_spectrum: halofit
+  matter_power_spectrum: halofit  # linear, halofit
 
   # Inference
   mcmc_engine: emcee  # zeus, emcee
   continue_sampling: False
   redshifts_to_fit: [deep_fields]  # deep_fields, tomographer
   correlations_to_use: [gg, gk]  # gg, gk, gt
-  # sigma8, Omega_m, b_g, b_g_scaled, b_a, b_b, b_0, b_1, b_2, A_sn, z_sfg, a, r, offset, a_2, r_2, n, A_z_tail
+  # sigma8, Omega_m, b_g, b_g_scaled, b_a, b_b, b_2, b_1, b_0, A_sn, z_sfg, a, r, offset, a_2, r_2, n, A_z_tail
   to_infere: [b_g_scaled, A_sn, z_sfg, a, r]
   max_iterations: 50000
   n_walkers: 32
