--- a/cosmologies.yml
+++ b/cosmologies.yml
@@ -1,7 +1,7 @@
 planck: {
-    Omega_c: 0.26066676,
-    Omega_b: 0.048974682,
-    h: 0.6766,
-    sigma8: 0.8102,
-    n_s: 0.9665,
+    Omega_c: 0.26503,
+    Omega_b: 0.04939,
+    h: 0.6732,
+    sigma8: 0.8111,
+    n_s: 0.96605,
 }
